# mxterm

./: .gitignore  CHANGELOG.md  README.en.md  README.md  README.zh-CN.md  mxterm.example.toml  pyproject.toml
.github/workflows/: build.yml  release.yml  test.yml
scripts/install/: install.ps1  install.sh
scripts/release/: build_binary.py  package_artifacts.py
src/mxterm/: __init__.py  cli.py  constants.py  models.py
src/mxterm/agent/: __init__.py  executor.py
src/mxterm/ai/: __init__.py  ollama_client.py  prompt_builder.py  translator.py
src/mxterm/config/: __init__.py  defaults.py  loader.py
src/mxterm/context/: __init__.py  history.py  session.py
src/mxterm/hooks/: __init__.py  bash.sh  powershell.ps1  zsh.sh
src/mxterm/installer/: __init__.py  bootstrap.py  profiles.py
src/mxterm/routing/: __init__.py  classifier.py  pipeline.py
src/mxterm/safety/: __init__.py  assessor.py  patterns.py  preview.py
src/mxterm/shell/: __init__.py  adapters.py  capabilities.py  executor.py
src/mxterm/ui/: __init__.py  console.py  renderers.py
src/mxterm/utils/: __init__.py  logging.py
tests/: test_agent_executor.py  test_bootstrap.py  test_classifier.py  test_cli.py  test_executor.py  test_installer.py  test_logging.py  test_pipeline.py  test_preview.py  test_prompt_builder.py  test_renderers.py  test_safety.py  test_session.py
