[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mxterm"
version = "0.1.3"
description = "MXTerm is a cross-platform shell enhancement tool powered by Ollama."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.0",
  "platformdirs>=4.3.0",
  "rich>=14.0.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
build = ["pyinstaller>=6.15.0"]

[project.scripts]
mxterm = "mxterm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mxterm"]
include = [
  "src/mxterm/hooks/*.sh",
  "src/mxterm/hooks/*.ps1",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/scripts",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/mxterm.example.toml",
  "/.github/workflows",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
